fix(deploy): force port 21 and remove loose security

--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -33,8 +33,7 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./out/
           server-dir: ./public_html/
-          security: loose
-          log-level: verbose
+          port: 21
           exclude: |
             **/.git*
             **/.git*/**
