--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,18 +2,10 @@ Options -MultiViews
 RewriteEngine On
 RewriteBase /
 
-# Force HTTPS
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-# Hide .html extension
-RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
-RewriteRule ^ /%1 [L,R=301]
-
-# To externally redirect /filename to /filename.html
+# Handle Next.js clean URLs (Internal rewrite only)
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.*)$ $1.html [L]
 
-# Handle Next.js 404
+# Handle 404
 ErrorDocument 404 /404.html
