--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,11 +1,9 @@
-Options -MultiViews
+# Simple .htaccess for Next.js Static Export with trailingSlash: true
+# Serve index.html files automatically
+
+Options +MultiViews
 RewriteEngine On
 RewriteBase /
-
-# Handle Next.js clean URLs (Internal rewrite only)
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*)$ $1.html [L]
 
 # Handle 404
 ErrorDocument 404 /404.html
