--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "social:publish": "tsx scripts/publish-social.ts",
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.6.13",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.33.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "node-fetch": "^2.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
@@ -24,9 +28,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
